update all project
