# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Template Clean Architecture Golang",
-        "title": "go-clean-architecture-template API",
+        "description": "Template Golang",
+        "title": "Go Clean Architecture Template API",
         "contact": {},
         "version": "1.0"
     },
@@ -25,11 +25,11 @@
                 "parameters": [
                     {
                         "description": "Set up users",
-                        "name": "request",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v0.userRequest"
+                            "$ref": "#/definitions/input.UserInput"
                         }
                     }
                 ],
@@ -37,19 +37,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.UserEntity"
+                            "$ref": "#/definitions/output.UserOutput"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/entity.response"
+                            "$ref": "#/definitions/output.ResponseError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/entity.response"
+                            "$ref": "#/definitions/output.ResponseError"
                         }
                     }
                 }
@@ -80,21 +80,21 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Returns the found user entity",
+                        "description": "Returns the found user",
                         "schema": {
-                            "$ref": "#/definitions/entity.UserEntity"
+                            "$ref": "#/definitions/output.UserOutput"
                         }
                     },
                     "400": {
                         "description": "Invalid UUID format",
                         "schema": {
-                            "$ref": "#/definitions/entity.response"
+                            "$ref": "#/definitions/output.ResponseError"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/entity.response"
+                            "$ref": "#/definitions/output.ResponseError"
                         }
                     }
                 }
@@ -126,7 +126,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v0.userRequest"
+                            "$ref": "#/definitions/input.UserInput"
                         }
                     }
                 ],
@@ -137,19 +137,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/entity.response"
+                            "$ref": "#/definitions/output.ResponseError"
                         }
                     },
                     "404": {
                         "description": "User not found",
                         "schema": {
-                            "$ref": "#/definitions/entity.response"
+                            "$ref": "#/definitions/output.ResponseError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/entity.response"
+                            "$ref": "#/definitions/output.ResponseError"
                         }
                     }
                 }
@@ -183,13 +183,13 @@
                     "400": {
                         "description": "Invalid UUID format",
                         "schema": {
-                            "$ref": "#/definitions/entity.response"
+                            "$ref": "#/definitions/output.ResponseError"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/entity.response"
+                            "$ref": "#/definitions/output.ResponseError"
                         }
                     }
                 }
@@ -197,39 +197,7 @@
         }
     },
     "definitions": {
-        "entity.UserEntity": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "entity.response": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "message"
-                }
-            }
-        },
-        "v0.userRequest": {
+        "input.UserInput": {
             "type": "object",
             "required": [
                 "name",
@@ -242,7 +210,30 @@
                 },
                 "phone": {
                     "type": "string",
-                    "example": "+551199999999"
+                    "example": "+5511999999999"
+                }
+            }
+        },
+        "output.ResponseError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "message"
+                }
+            }
+        },
+        "output.UserOutput": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
                 }
             }
         }
