# internal/controller/rest/input/user_input.go
@@ -1,6 +1,12 @@
 package input
 
+import "github.com/DeSouzaRafael/go-clean-architecture-template/infra/validator"
+
 type UserInput struct {
-	Name  string `json:"name" binding:"required"  example:"user name"`
-	Phone string `json:"phone" binding:"required"  example:"+551199999999"`
+	Name  string `json:"name" binding:"required" validate:"required" example:"user name"`
+	Phone string `json:"phone" binding:"required" validate:"required,phone_format" example:"+5511999999999"`
+}
+
+func (input *UserInput) Validate(v *validator.Validator) error {
+	return v.Validate(input)
 }
