# internal/controller/rest/output/errors_output.go
@@ -1,13 +1,13 @@
-package rest
+package output
 
 import (
 	"github.com/labstack/echo/v4"
 )
 
-type response struct {
+type ResponseError struct {
 	Error string `json:"error" example:"message"`
 }
 
 func ErrorResponse(c echo.Context, code int, msg string) error {
-	return c.JSON(code, response{Error: msg})
+	return c.JSON(code, ResponseError{Error: msg})
 }
